# not_gwent

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  test.yaml
data/config/: ledit.yaml
data/layout/: card.yaml  cp.yaml  gb.yaml  gl.yaml  test.yaml
data/scripts/: myscript.lua
md/: menu.arch.md  menu.md  sprints.md
notes/: NotGwent.canvas  TODO.todotxt  todo.md
notes/.obsidian/: appearance.json  community-plugins.json  workspace.json
scripts/: ids.py
src/: assert.hpp  assert_msg.hpp  context.cpp  context.hpp  conv.hpp  id_bip0039.cpp  id_bip0039.hpp  layout_node.cpp  layout_node.hpp  main.cpp  random.cpp  random.hpp  record.hpp  scene.hpp  scene_card_test.hpp  scene_demo_window.hpp  scene_game.hpp  scene_grid_editor.cpp  scene_grid_editor.hpp  scene_math_test.hpp  scene_nanovg_test.hpp  scene_proto_test.hpp
src/bind/: bind.cpp  bind.hpp  imgui_bind.cpp  imgui_bind.hpp
src/game/: Card.hpp  asset_loader.cpp  asset_loader.hpp  asset_store.hpp  assets.hpp  card.cpp  card.hpp  card_animation.hpp  card_container.hpp  card_layout.hpp  card_list.cpp  card_list.hpp  card_mover.cpp  card_mover.hpp  card_stack.cpp  card_stack.hpp  card_tank.cpp  card_tank.hpp  cardlist.cpp  cardlist.hpp  cards_layout.cpp  cards_layout.hpp  cardstack.cpp  cardstack.hpp  conv.hpp  game.cpp  game.hpp  game2.cpp  game2.hpp  game_ability.cpp  game_ability.hpp  game_action.cpp  game_action.hpp  game_card_picker.cpp  game_card_picker.hpp  game_cast.cpp  game_cast.hpp  game_cast_list.hpp  game_combat_row.cpp  game_combat_row.hpp  (+13 more)
src/gfx/: gfx_animation.hpp  gfx_attribute.hpp  gfx_curves.cpp  gfx_curves.hpp  gfx_dbg.cpp  gfx_dbg.hpp  gfx_draw.cpp  gfx_draw.hpp  gfx_drect.cpp  gfx_drect.hpp  gfx_easings.hpp  gfx_palette.hpp  gfx_prototype.hpp  gfx_shader.cpp  gfx_shader.hpp  gfx_spinner.cpp  gfx_spinner.hpp  gfx_spring.hpp  gfx_tween.hpp  gfx_types.hpp  gfx_uniform.hpp  gfx_variable.hpp  gfx_view_transform.cpp  gfx_view_transform.hpp  gfx_virt2d.cpp  gfx_virt2d.hpp  gfx_vlist.hpp
src/layout/: layout_box.hpp
src/ledit/: ledit_bind.cpp  ledit_bind.hpp  ledit_box.cpp  ledit_box.hpp  ledit_box_visitor.cpp  ledit_box_visitor.hpp  ledit_editor.cpp  ledit_editor.hpp  ledit_enums.hpp  ledit_flex.cpp  ledit_flex.hpp  ledit_layout.cpp  ledit_layout.hpp  ledit_options.cpp  ledit_options.hpp  ledit_sizer.cpp  ledit_sizer.hpp  ledit_types.hpp  ledit_yaml.cpp  ledit_yaml.hpp
src/ng/: cards.cpp  cards.hpp  ng_action.hpp  ng_card.cpp  ng_card.hpp  ng_card_data.cpp  ng_card_data.hpp  ng_enum.cpp  ng_enum.hpp  ng_game.cpp  ng_game.hpp  ng_game_solver.cpp  ng_game_solver.hpp
src/res/: res.hpp  res_loader.cpp  res_loader.hpp  res_store.hpp
(+63 files in other folders)
